fix vertical alignment

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -56,10 +56,15 @@ h1 {
   border-radius: 50px;
   width: 80%;
   height: auto;
-  margin: 0 auto;
   padding: 2%;
   border: 6px solid $colorGrey;
+  margin: 0;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
+
 .active {
   color: $colorWhite;
   background-color: $colorBlack;
